# FMI-Design-Patterns

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.cpp
figures/: CMakeLists.txt  cov.sh
figures/src/: abstract_factory.hpp  commands.hpp  figure_factory.hpp  stringifiable.hpp  type_registry.hpp  utils.hpp
figures/tmp/: test_file.txt
hasher/: CMakeLists.txt  cov.sh  main.cpp  test.cpp
hasher/src/: FSTree.hpp  calculators.hpp  factory.hpp  observe.hpp  pipes.hpp  progress.hpp  reportData.cpp  reportData.hpp  utils.cpp  visitors.hpp
hasher/test/: a
hasher/test/asd/: 1
labels/: CMakeLists.txt  a.out  cov.sh  main.cpp  test.cpp
labels/src/: autoref.hpp  concat.hpp  flaggedptr.hpp  label.hpp  labelDecorators.hpp  labelModifiers.hpp  labelTransformations.hpp  utils.hpp
src/: abstract_factory.hpp  cloneable.hpp  commands.hpp  factory.hpp  figure_factory.hpp  figures.hpp  stringifiable.hpp  type_registry.hpp  utils.hpp
